[gd_scene load_steps=8 format=3 uid="uid://8s5ser2tsuiy"]

[ext_resource type="Script" uid="uid://4ggmn711o3d" path="res://scripts/intro.gd" id="1_8lp0l"]
[ext_resource type="PackedScene" uid="uid://k635iu86fy37" path="res://scene_objects/menu_background.tscn" id="2_crour"]
[ext_resource type="PackedScene" uid="uid://bmuu7gov5nfwd" path="res://scene_objects/title_bar.tscn" id="3_t1qkj"]
[ext_resource type="FontFile" uid="uid://com4cjqc1ln44" path="res://assets/fonts/Montserrat-Medium.otf" id="4_cgdah"]
[ext_resource type="FontFile" uid="uid://smk86k8i0gcp" path="res://assets/fonts/Montserrat-Bold.otf" id="5_427m8"]
[ext_resource type="PackedScene" uid="uid://oq5258by1a1k" path="res://scene_objects/menu_button.tscn" id="6_0naf5"]
[ext_resource type="AudioStream" uid="uid://dni54tcejhs1c" path="res://assets/sfx/Sequence, Typing Burst, Variations, Perspective 02, Clicking 03.ogg" id="9_j3xyw"]

[node name="IntroScreen" type="Node2D"]
script = ExtResource("1_8lp0l")

[node name="backgroudMenu" parent="." instance=ExtResource("2_crour")]
modulate = Color(1, 0.295309, 0.679364, 1)

[node name="menuContainer" type="VBoxContainer" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_constants/separation = 30

[node name="Title" parent="menuContainer" instance=ExtResource("3_t1qkj")]
layout_mode = 2
text = "Here goes the title"

[node name="optionsContainer" type="HBoxContainer" parent="menuContainer"]
custom_minimum_size = Vector2(0, 600)
layout_mode = 2
alignment = 1

[node name="introText" type="RichTextLabel" parent="menuContainer/optionsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1300, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_constants/line_separation = 25
theme_override_fonts/normal_font = ExtResource("4_cgdah")
theme_override_fonts/bold_font = ExtResource("5_427m8")
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 60
bbcode_enabled = true
text = "Here it goes the intro text."
scroll_following = true

[node name="skipIntroButton" parent="menuContainer" instance=ExtResource("6_0naf5")]
unique_name_in_owner = true
layout_mode = 2

[node name="TypingSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_j3xyw")

[connection signal="pressed" from="menuContainer/skipIntroButton" to="." method="_on_skip_intro_button_pressed"]
